--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,147 +1,8 @@
-about-time==4.2.1
-alive-progress==3.3.0
-anyio==4.10.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-autograd==1.8.0
-babel==2.17.0
-beautifulsoup4==4.13.5
-bleach==6.2.0
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-cma==4.3.0
-colorama==0.4.6
-comm==0.2.3
-contourpy==1.3.3
-cycler==0.12.1
-Cython==0.29.35
-debugpy==1.8.16
-decorator==5.2.1
-defusedxml==0.7.1
-Deprecated==1.2.18
-dill==0.4.0
-executing==2.2.1
-fastjsonschema==2.21.2
-filelock==3.19.1
-fonttools==4.59.2
-fqdn==1.5.1
-fsspec==2025.9.0
-graphemeu==0.7.2
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-ipykernel==6.30.1
-ipython==9.5.0
-ipython_pygments_lexers==1.1.1
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.5.2
-json5==0.12.1
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kiwisolver==1.4.9
-lark==1.2.2
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.6
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.4
-mpmath==1.3.0
-mysql-connector==2.2.9
-mysql-connector-python==9.3.0
-natsort==8.4.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-ninja==1.11.1.4
-nncf==2.17.0
-notebook_shim==0.2.4
-numpy==2.2.6
-onnx==1.18.0
-opencv-python==4.12.0.88
-openvino==2025.2.0
-openvino-telemetry==2025.2.0
-packaging==25.0
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.5
-pillow==11.3.0
-platformdirs==4.4.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.52
-protobuf==6.32.0
-psutil==7.0.0
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pycocotools==2.0.10
-pycparser==2.23
-pydot==3.0.4
-Pygments==2.19.2
-pymoo==0.6.1.5
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
-pytz==2025.2
-pywin32==311
-pywinpty==3.0.0
-PyYAML==6.0.2
-pyzmq==27.1.0
-referencing==0.36.2
-requests==2.32.5
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rich==14.1.0
-rpds-py==0.27.1
-safetensors==0.6.2
-scikit-learn==1.7.2
-scipy==1.16.1
-Send2Trash==1.8.3
-setuptools==80.9.0
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.8
-stack-data==0.6.3
-supervision==0.11.0
-sympy==1.14.0
-tabulate==0.9.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-torch==2.8.0+cpu
-torchvision==0.23.0+cpu
-tornado==6.5.2
-tqdm==4.66.3
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20250822
-typing_extensions==4.15.0
-tzdata==2025.2
-ultralytics==8.3.159
-ultralytics-thop==2.0.17
-uri-template==1.3.0
-urllib3==2.5.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-wrapt==1.17.3
+ultralytics #YOLOv8 model
+opencv-python #camera and video-handling
+numpy #used for number handling
+fastapi #backend framework
+uvicorn #server to run fastapi
+SQLAlchemy #It is Object relational mapping makes easy to work with database
+psycopg2-binary #connector to postgreSQL
+python-dotenv #uses to store db credentials
